--- a/arduino/keezerstat/keezerstat.vcxproj
+++ b/arduino/keezerstat/keezerstat.vcxproj
@@ -43,7 +43,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>C:\Arduino\arduino-1.0.1\hardware\arduino\cores\arduino;C:\Arduino\arduino-1.0.1\hardware\arduino\variants\standard;C:\Arduino\arduino-1.0.1\libraries\Wire;C:\Arduino\arduino-1.0.1\libraries\Wire\utility;C:\Users\bmayland\Documents\Arduino\libraries\LiquidCrystal;C:\Users\bmayland\Documents\Arduino\libraries\LiquidCrystal\utility;C:\Users\bmayland\Documents\Arduino\libraries\OneWire;C:\Users\bmayland\Documents\Arduino\libraries\OneWire\utility;C:\Users\bmayland\Documents\Arduino\libraries\Bounce;C:\Users\bmayland\Documents\Arduino\libraries\Bounce\utility;C:\Users\bmayland\Documents\Arduino\libraries\DallasTemperature;C:\Users\bmayland\Documents\Arduino\libraries\DallasTemperature\utility;c:\arduino\arduino-1.0.1\hardware\tools\avr\avr\include\;c:\arduino\arduino-1.0.1\hardware\tools\avr\avr\include\avr\;c:\arduino\arduino-1.0.1\hardware\tools\avr\avr\;c:\arduino\arduino-1.0.1\hardware\tools\avr\lib\gcc\avr\4.3.2\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>Visual Micro\.keezerstat.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <ForcedIncludeFiles>C:\Users\bmayland\Documents\keezerstat\arduino\keezerstat\Visual Micro\.keezerstat.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>_DEBUG=1;_VMDEBUG=1;ARDUINO=101;__AVR_ATmega328P__;F_CPU=8000000L;__AVR__;TWI_FREQ=400000L;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
